2004-07-29  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Fix the alphabetical order of plot style
	doc sections.

2004-07-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util.c (PRINT_SPACES_UNDER_PROMPT): Protect against
	NULL prompt.

2004-07-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Bugfix: caret position of error messages in multiplot modes was
	wrong.
	
	* src/util.c (current_prompt): New variable holding the currently
	used prompt string.
	(PRINT_SPACES_UNDER_PROMPT): Use current_prompt instead of global
	PROMPT macro.  Use a pointer loop instead of a counter.
	(PRINT_SPACES_UNDER_PROMPT, PRINT_SPACES_UPTO_TOKEN): Enclosed
	macro body in do .. while(0).
	(os_error, int_error, int_warn): Use current_prompt instead of
	global macro PROMPT.

	* src/util.h (current_prompt): Declare.

	* src/command.h (PROMPT): Moved this global macro into command.c.

	* src/command.c (PROMPT): Moved macro to here.
	(read_line) [VMS]: Update new global variable current_prompt.
	(read_line) [!VMS]: Likewise.

2004-07-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Code style changes: get rid of register keywords. Don't put
	parens around simple variables or term->element names.
	
	* src/graphics.c (boundary): If bmargin was set by user, key below
	should not modify ybot.  Reindented.
	
	(key_cols): Made local to boundary(), the only function using it.

2004-07-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/parse.c (cleanup_udvlist): Fix memory leak; if udv structure
	is freed, free its dynamically allocated name also.

	* src/command.c (print_set_output): Fix memory leak; free old 
	filename before setting a new one.

	* src/plot3d.c: Remove unnecessary #include "plot2d.h".

2004-07-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util.h (os_error, int_error, int_warn, graph_error):
	Reverted change to prototypes for non-ANSI case back from (void)
	to ().

	* src/fit.c (Dblfn): Likewise.
